# expml

./: .gitignore  LICENSE  MANIFEST.in  Makefile  README.md  pyproject.toml  setup.py
docs/specs/: config.json
examples/: data.py  rnn_expml.py
examples/example_specs/: metadata.json  summary.json
expml/: __init__.py  api.py  cli.py  expml_tui  monitor.py  writer.py
expml.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
expml_runs/: latest-run
expml_runs/run-066e6e15/: metadata.json  metrics.jsonl  summary.json
expml_runs/run-671ffb7e/: metadata.json  metrics.jsonl  summary.json
expml_runs/run-82d1d56c/: metadata.json  metrics.jsonl  summary.json
expml_runs/run-83cbfc15/: metadata.json  metrics.jsonl  summary.json
expml_runs/run-844612af/: metadata.json  metrics.jsonl  summary.json
expml_runs/run-87d416ea/: metadata.json  metrics.jsonl  summary.json
expml_runs/run-9a667214/: metadata.json  metrics.jsonl  summary.json
expml_runs/run-b8e25faf/: metadata.json  metrics.jsonl  summary.json
expml_runs/run-cea17a69/: config.json  metadata.json  metrics.jsonl  summary.json
specs/: metrics.jsonl
src/: CommandLine.c  CommandLine.h  Constants.h  DataLoader.c  DataLoader.h  FunctionBar.c  FunctionBar.h  Header.c  Header.h  Log.c  Log.h  LogViewer.c  LogViewer.h  MetricsPanel.c  MetricsPanel.h  Panel.c  Panel.h  RunPanel.c  RunPanel.h  ScreenManager.c  ScreenManager.h  SparkLine.c  SparkLine.h  Storage.c  Storage.h  SystemPanel.c  SystemPanel.h  TUI.c  TUI.h  Terminal.c  Terminal.h  expml.c
tests/: test_panel.c  test_storage.c
(+7 files in other folders)
