[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "expml"
version = "0.0.1"
description = "terminal-based ML experiment tracker 🎧"
authors = [{name = "Suresh Neethimohan", email = "mohansuresh333@gmail.com"}]
dependencies = [
    "psutil",
]
requires-python = ">=3.10"

